Move LED flashlight overlay from Settings

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -224,4 +224,7 @@ Passion has no keyboard so all values are zero.
      
      <!-- We can change battery LED color (orange/amber/green) -->
      <bool name="config_multiColorBatteryLed">true</bool>
+
+    <!-- LED Flashlight -->
+    <bool name="config_enableTorch">true</bool>
 </resources>
