Enable variable button brightness + turn on button backlight only when it's dark
copied button/keyboard backlight values from stock rom

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -81,12 +81,15 @@
         <item>65</item>
         <item>80</item>
         <item>100</item>
-        <item>120</item>
-        <item>140</item>
-        <item>160</item>
-        <item>180</item>
-        <item>200</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
     </integer-array>
+
+    <!-- We can change button brightness -->
+    <bool name="config_deviceHasVariableButtonBrightness">true</bool>
 
 <!-- Array of output values for keyboard backlight corresponding to the LUX values
 in the config_autoBrightnessLevels array.  This array should have size one greater
@@ -98,11 +101,11 @@ Passion has no keyboard so all values are zero.
         <item>65</item>
         <item>80</item>
         <item>100</item>
-        <item>120</item>
-        <item>140</item>
-        <item>160</item>
-        <item>200</item>
-        <item>255</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
     </integer-array>
 
     <!-- Default keyboard backlight level (matches config_buttonBrightnessSettingDefault) -->
